--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "/oclif.manifest.json"
   ],
   "dependencies": {
+    "@notionhq/client": "^1.0.0",
     "@oclif/core": "^1",
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.0.1"
   },
   "devDependencies": {
+    "@notion-stuff/v4-types": "^5.1.0",
     "@oclif/test": "^2",
     "@types/chai": "^4",
     "@types/mocha": "^9.0.0",
