--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "/oclif.manifest.json"
   ],
   "dependencies": {
-    "@notionhq/client": "0.4.9",
+    "@notionhq/client": "^1.0.4",
     "@oclif/core": "^1",
     "@oclif/plugin-help": "^5",
-    "@oclif/plugin-plugins": "^2.1.0"
+    "@oclif/plugin-plugins": "^2.1.0",
+    "@tryfabric/martian": "^1.2.0"
   },
   "devDependencies": {
     "@notion-stuff/v4-types": "^5.1.0",
