--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "@types/mocha": "^9.1.0",
     "@types/node": "^16.18.16",
     "chai": "^4",
-    "eslint": "^7.32.0",
+    "eslint": "^8.36.0",
     "eslint-config-oclif": "^4",
     "eslint-config-oclif-typescript": "^1.0.3",
     "globby": "^11",
     "mocha": "^9",
     "oclif": "^2",
+    "prettier": "^2.8.5",
     "shx": "^0.3.4",
     "ts-node": "^10.9.1",
     "tslib": "^2.3.1",
