--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^8.36.0",
     "eslint-config-oclif": "^4",
     "eslint-config-oclif-typescript": "^1.0.3",
+    "eslint-config-prettier": "^8.7.0",
     "globby": "^11",
     "mocha": "^9",
     "oclif": "^2",
