--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-oclif": "^4",
     "eslint-config-oclif-typescript": "^1.0.3",
     "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-unicorn": "^46.0.0",
     "globby": "^11",
     "mocha": "^9",
     "oclif": "^2",
