--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "notion-cli-ts",
+  "name": "@litencatt/notion-cli",
   "version": "0.4.0",
   "description": "Notion CLI",
-  "author": "litencatt @litencatt",
+  "author": "litencatt",
   "bin": {
     "notion-cli-ts": "./bin/run"
   },
