yarn add @inquirer/prompts, yarn add -D @types/inquirer

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "/oclif.manifest.json"
   ],
   "dependencies": {
+    "@inquirer/prompts": "^1.0.0",
     "@notionhq/client": "^2.2.4",
     "@oclif/core": "^2",
     "@oclif/plugin-help": "^5",
@@ -27,6 +28,7 @@
     "@notion-stuff/v4-types": "^5.1.0",
     "@oclif/test": "^2",
     "@types/chai": "^4",
+    "@types/inquirer": "^9.0.3",
     "@types/mocha": "^9.1.0",
     "@types/node": "^16.18.25",
     "chai": "^4",
