Change to prompts

--- a/package.json
+++ b/package.json
@@ -17,20 +17,20 @@
     "/oclif.manifest.json"
   ],
   "dependencies": {
-    "@inquirer/prompts": "^1.0.0",
     "@notionhq/client": "^2.2.4",
     "@oclif/core": "^2",
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.4.7",
-    "@tryfabric/martian": "^1.2.4"
+    "@tryfabric/martian": "^1.2.4",
+    "prompts": "^2.4.2"
   },
   "devDependencies": {
     "@notion-stuff/v4-types": "^5.1.0",
     "@oclif/test": "^2",
     "@types/chai": "^4",
-    "@types/inquirer": "^9.0.3",
     "@types/mocha": "^9.1.0",
     "@types/node": "^16.18.25",
+    "@types/prompts": "^2.4.4",
     "chai": "^4",
     "eslint": "^8.39.0",
     "eslint-config-oclif": "^4",
