--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^2.4.7",
     "@tryfabric/martian": "^1.2.4",
+    "dayjs": "^1.11.7",
     "prompts": "^2.4.2"
   },
   "devDependencies": {
