--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme --multi",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif readme && git add README.md"
+    "version": "oclif readme --multi && git add README.md"
   },
   "engines": {
     "node": ">=12.0.0"
