--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-unicorn": "^46.0.1",
     "globby": "^11",
     "mocha": "^9",
+    "nock": "^13.3.2",
     "oclif": "^3",
     "prettier": "^2.8.8",
     "shx": "^0.3.4",
