Remove plugin-plugin

--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "dirname": "notion-cli",
     "commands": "./dist/commands",
     "plugins": [
-      "@oclif/plugin-help",
-      "@oclif/plugin-plugins"
+      "@oclif/plugin-help"
     ],
     "topicSeparator": " ",
     "topics": {
