--- a/package.json
+++ b/package.json
@@ -66,9 +66,8 @@
     "build": "shx rm -rf dist && tsc -b",
     "lint": "eslint . --ext .ts --config .eslintrc.json",
     "postpack": "shx rm -f oclif.manifest.json",
-    "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme --multi",
-    "test": "mocha --forbid-only \"test/**/*.test.ts\"",
+    "test": "mocha --forbid-only \"test/commands/db/**/*.test.ts\" \"test/commands/page/**/*.test.ts\"",
     "version": "oclif readme --multi && git add README.md"
   },
   "engines": {
