--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,6 +75,8 @@ jobs:
           file: Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
+          # https://github.com/docker/build-push-action/issues/820
+          provenance: false
           tags: |
             ghcr.io/${{ github.actor }}/notion-cli:latest
             ghcr.io/${{ github.actor }}/notion-cli:${{ steps.latest_version.outputs.version }}
