--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "postpack": "shx rm -f oclif.manifest.json",
     "prepack": "yarn build && oclif manifest && yarn readme",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
-    "readme": "oclif readme --multi"
+    "readme": "oclif readme --multi && shx sed -i \"s/^_See code:.*$//g\" docs/*.md"
   },
   "engines": {
     "node": ">=12.0.0"
