--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: Update docs
 on:
   pull_request:
     paths:
-      - "src"
+      - "src/**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
