--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,15 +19,9 @@ jobs:
 
       - run: |
           yarn
-          yarn oclif manifest
           yarn prepack
 
       - name: Add & Commit
         uses: EndBug/add-and-commit@v9
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "20.x"
-          registry-url: "https://registry.npmjs.org"
-
-      - run: yarn && yarn test
+      - run: yarn test
