--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@oclif/plugin-plugins": "^2.4.7",
     "@tryfabric/martian": "^1.2.4",
     "dayjs": "^1.11.9",
+    "notion-to-md": "^3.1.1",
     "prompts": "^2.4.2"
   },
   "devDependencies": {
